WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182742
Web Automation: don't return an error if resizing/moving a window has no effect
https://bugs.webkit.org/show_bug.cgi?id=182742
Summary
Web Automation: don't return an error if resizing/moving a window has no effect
Blaze Burg
Reported
2018-02-13 13:07:21 PST
The specification has no such demands, and it just causes tests to fail unnecessarily. Remove the error case.
Attachments
Proposed Fix
(3.06 KB, patch)
2018-02-13 13:52 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-02-13 13:52:59 PST
Created
attachment 333721
[details]
Proposed Fix
Tim Horton
Comment 2
2018-02-13 13:59:16 PST
Comment on
attachment 333721
[details]
Proposed Fix What's the testing story? I would have expected the original code to come with a test, but I don't see you removing one?
Blaze Burg
Comment 3
2018-02-13 14:21:14 PST
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 333721
[details]
> Proposed Fix > > What's the testing story? I would have expected the original code to come > with a test, but I don't see you removing one?
The Set Window Rect W3C endpoint for safaridriver is blocked by other reviews, but once it's hooked up, I hit this in my branch while running conformance tests. It expects setting window rect to be idempotent without error if you get the window frame then set the window frame to the same rect.
https://github.com/w3c/web-platform-tests/blob/master/webdriver/tests/set_window_rect.py#L261
WebKit Commit Bot
Comment 4
2018-02-13 14:36:20 PST
Comment on
attachment 333721
[details]
Proposed Fix Clearing flags on attachment: 333721 Committed
r228434
: <
https://trac.webkit.org/changeset/228434
>
WebKit Commit Bot
Comment 5
2018-02-13 14:36:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-02-13 14:37:19 PST
<
rdar://problem/37513710
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug