Web Automation: don't return an error if resizing/moving a window has no effect https://bugs.webkit.org/show_bug.cgi?id=182742

Reviewed by Tim Horton.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::resizeWindowOfBrowsingContext):
(WebKit::WebAutomationSession::moveWindowOfBrowsingContext):
Unify the behavior for all ports. Don't raise an error if the command was
idempotent (by mistake or not). It should not be an error to re-maximize a window.


Canonical link: https://commits.webkit.org/198530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228434 268f45cc-cd09-0410-ab3c-d52691b4dbfc